# AgentTeam

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
.claude/: settings.json
crates/forgeflow-agents/: Cargo.toml
crates/forgeflow-agents/src/: lib.rs
crates/forgeflow-cli/: Cargo.toml
crates/forgeflow-cli/src/: main.rs
crates/forgeflow-config/: Cargo.toml
crates/forgeflow-config/src/: lib.rs
crates/forgeflow-core/: Cargo.toml
crates/forgeflow-core/src/: lib.rs
crates/forgeflow-domain/: Cargo.toml
crates/forgeflow-domain/src/: lib.rs
crates/forgeflow-loop/: Cargo.toml
crates/forgeflow-loop/src/: controller.rs  learning.rs  lib.rs  step.rs
crates/forgeflow-memory/: Cargo.toml
crates/forgeflow-memory/src/: lib.rs
crates/forgeflow-observability/: Cargo.toml
crates/forgeflow-observability/src/: lib.rs
crates/forgeflow-orchestrator/: Cargo.toml
crates/forgeflow-orchestrator/src/: lib.rs
crates/forgeflow-policy/: Cargo.toml
crates/forgeflow-policy/src/: lib.rs
crates/forgeflow-repo/: Cargo.toml
crates/forgeflow-repo/src/: lib.rs
crates/forgeflow-runtime/: Cargo.toml
crates/forgeflow-runtime/src/: lib.rs
crates/forgeflow-testkit/: Cargo.toml
crates/forgeflow-testkit/src/: lib.rs
crates/forgeflow-workflows/: Cargo.toml
crates/forgeflow-workflows/src/: lib.rs
docs/architecture/: overview.md
docs/architecture/adr/: 0001-rust-workspace.md  0002-provider-abstraction.md
docs/process/: delivery-workflow.md  handoffs.md  multi-conversation-memory.md  parallel-development.md
schemas/: artifact-manifest.schema.json  execution-event.schema.json  guidance.schema.json  memory-record.schema.json  work-item.schema.json
