[package]
name = "forgeflow-loop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
forgeflow-core.workspace = true
forgeflow-domain.workspace = true
forgeflow-config.workspace = true
forgeflow-memory.workspace = true
forgeflow-runtime.workspace = true
forgeflow-agents.workspace = true
forgeflow-orchestrator.workspace = true
forgeflow-policy.workspace = true
forgeflow-workflows.workspace = true
