[package]
name = "forgeflow-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
forgeflow-core.workspace = true
forgeflow-domain.workspace = true
