[package]
name = "forgeflow-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
forgeflow-core.workspace = true
forgeflow-domain.workspace = true
forgeflow-runtime.workspace = true
forgeflow-workflows.workspace = true
forgeflow-agents.workspace = true
